1998-12-22  Jeff Garzik  <jgarzik@pobox.com>

	* gnome.m4:  Added and exported GNOME_APPLET_LIBS.

1998-12-16  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gnome-support.m4: Removed all the stuff for argp, that was
	causing gnomesupport not to build.

1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* gnome-gettext.m4: Add the hacked version of the gettext
	macros that is used in Gtk+ here.

	* autogen.sh: Accept both AM_GNU_GETTEXT and AM_GNOME_GETTEXT.
	 
1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: All parts of GNOME will now require
	LibGTop >= 0.99.0 which is the latest version from CVS and
	already feature-freezed for GNOME 1.0.
	
1998-12-09  Martin Baulig  <martin@home-of-linux.org>

	* aclocal-include.m4 (AM_ACLOCAL_INCLUDE): Make this work
	with more than one directory.

1998-12-08  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Moved into the LibGTop module.
	This file contains too much stuff that should only be used
	internally in LibGTop, so it's better to have it there.

1998-12-06  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Recognice OpenBSD as a valid
	system and use the `freebsd' sysdeps directory for it.

Sat Dec  5 23:30:01 PST 1998 Manish Singh <yosh@gimp.org>

	* gnome-guile-checks.m4: clear GUILE_LIBS and GUILE_INCS if
	guile isn't there (quick fix)

1998-12-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Recognice NetBSD as a valid
	system and use the `freebsd' sysdeps directory for it.

1998-12-03  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (GLIBTOP_LINUX_VERSION_CODE):
	Define this to be the same as LINUX_VERSION_CODE either from
	<linux/version.h> or from the running kernel.

1998-12-02  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: "Improve" indentation and messages somewhat.

1998-12-01  Jeff Garzik  <jgarzik@pobox.com>

	* autogen.sh: